# genjipk-sdk

./: .gitignore  pyproject.toml  ruff.toml
.github/workflows/: release.yml
src/genjipk_sdk/: __init__.py  change_requests.py  completions.py  difficulties.py  helpers.py  internal.py  jobs.py  logs.py  lootbox.py  maps.py  newsfeed.py  rank_card.py  tags.py  users.py  xp.py
src/genjipk_sdk/models/: __init__.py  completions.py  jobs.py  logging.py  lootbox.py  maps.py  newsfeed.py  rank_card.py  tags.py  users.py  xp.py
src/genjipk_sdk/types/: __init__.py  difficulties.py  maps.py  ranks.py
src/genjipk_sdk/utilities/: __init__.py  difficulties.py  lootbox.py  maps.py
src/genjipk_sdk/utilities/_types/: __init__.py  maps.py  newsfeed.py  ranks.py
src/genjipk_sdk/utilities/types/: __init__.py  maps.py  newsfeed.py
