[project]
name = "genjipk-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tylovejoy", email = "48333668+tylovejoy@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["hatchling>=1.27.0", "msgspec>=0.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.29.4", "ruff>=0.12.0"]

[tool.ruff]
exclude = ["tests"]
line-length = 120
target-version = "py313"

lint.select = [
    'E',
    'F',
    'W',
    'A',
    'PL',
    'I',
    'SIM',
    'RUF',
    'ASYNC',
    'C4',
    'INP',
    'ERA',
    'SLF',
    'PIE',
    'PYI',
    'ANN',
    'N',
    'D',
]
lint.ignore = [
    'ANN002',
    'ANN003',
    'D203',
    'D100',
    'D101',
    'D104',
    'RUF012',
    'TC002',
    'D213',
    'TC001',
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
genjipk-sdk = { path = "../genjipk-sdk" }
