[project]
name = "genjipk-sdk"
version = "1.0.0"
description = "A command library for Genji Parkour services."
readme = "README.md"
authors = [
    { name = "tylovejoy", email = "48333668+tylovejoy@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
 "msgspec>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
 "basedpyright>=1.29.4",
 "build>=1.3.0",
 "python-semantic-release>=10.5.2",
 "ruff>=0.12.0",
]

[tool.semantic_release]
version_source = "tag"
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
upload_to_pypi = true
upload_to_release = true
build_command = "python -m build"

[tool.ruff]
exclude = ["tests"]
line-length = 120
target-version = "py313"

lint.select = [
    'E',
    'F',
    'W',
    'A',
    'PL',
    'I',
    'SIM',
    'RUF',
    'ASYNC',
    'C4',
    'INP',
    'ERA',
    'SLF',
    'PIE',
    'PYI',
    'ANN',
    'N',
    'D',
]
lint.ignore = [
    'ANN002',
    'ANN003',
    'D203',
    'D100',
    'D101',
    'D104',
    'RUF012',
    'TC002',
    'D213',
    'TC001',
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
genjipk-sdk = { path = "../genjipk-sdk" }
